[gd_scene load_steps=17 format=2]

[ext_resource path="res://WorldScript.gd" type="Script" id=1]
[ext_resource path="res://Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/OutlineMaterial.tres" type="Material" id=3]
[ext_resource path="res://Bot.tscn" type="PackedScene" id=4]
[ext_resource path="res://Bot.gd" type="Script" id=5]
[ext_resource path="res://ControlPanel.tscn" type="PackedScene" id=6]
[ext_resource path="res://ControlPanel.gd" type="Script" id=7]
[ext_resource path="res://assets/GoalMaterial.tres" type="Material" id=8]
[ext_resource path="res://Domino.tscn" type="PackedScene" id=9]
[ext_resource path="res://lightblock_material.tres" type="Material" id=10]
[ext_resource path="res://domino.tres" type="Material" id=11]

[sub_resource type="ProceduralSky" id=1]
sky_top_color = Color( 1, 1, 1, 1 )
ground_bottom_color = Color( 0, 0, 0, 1 )
sun_latitude = 50.0

[sub_resource type="Environment" id=2]
background_mode = 2
background_sky = SubResource( 1 )
ambient_light_color = Color( 1, 1, 1, 1 )
ambient_light_energy = 0.25
ambient_light_sky_contribution = 0.8
fog_enabled = true
fog_color = Color( 1, 1, 1, 1 )
dof_blur_far_distance = 100.0
dof_blur_far_transition = 50.0

[sub_resource type="CubeMesh" id=3]
size = Vector3( 1.01, 1.01, 1.01 )

[sub_resource type="ConvexPolygonShape" id=4]
points = PoolVector3Array( 1, 1, 1, 1, 1, -1, -1, 1, 1, 1, -1, 1, 1, -1, -1, -1, 1, -1, -1, -1, 1, -1, -1, -1 )

[sub_resource type="CubeMesh" id=5]

[node name="Spatial" type="Spatial"]
script = ExtResource( 1 )

[node name="ControlPanel" parent="." instance=ExtResource( 6 )]
script = ExtResource( 7 )

[node name="Player" parent="." instance=ExtResource( 2 )]
transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 3.09935, 76.7161, 0 )

[node name="Bot" parent="." instance=ExtResource( 4 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 3.09935, 76.3131, 2.57355 )
script = ExtResource( 5 )

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 2 )

[node name="DirectionalLight" type="DirectionalLight" parent="."]
transform = Transform( 0.909614, 0.00915034, -0.415354, 0.415455, -0.0200341, 0.909393, 0, -0.999757, -0.0220249, -3.24948, 63.4612, -1.3352 )
shadow_enabled = true

[node name="BlockOutline" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 4.45231, 76.9593, 5.6143 )
mesh = SubResource( 3 )
material/0 = ExtResource( 3 )

[node name="GoalOutline" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 20.8261, 73.546, 5.38885 )
mesh = SubResource( 3 )
material/0 = ExtResource( 8 )

[node name="LightBlock1" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 14.4116, 73.546, 6.09123 )
mesh = SubResource( 3 )
material/0 = ExtResource( 10 )

[node name="LightBlock2" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 26.8667, 73.546, 0 )
mesh = SubResource( 3 )
material/0 = ExtResource( 10 )

[node name="LightBlock3" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 20.8261, 73.546, -7.16101 )
mesh = SubResource( 3 )
material/0 = ExtResource( 10 )

[node name="LightBlock4" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 12.6981, 73.546, 0 )
mesh = SubResource( 3 )
material/0 = ExtResource( 10 )

[node name="Domino" parent="." instance=ExtResource( 9 )]
transform = Transform( 0.0421373, 0, 0.999112, 0, 1, 0, -0.999112, 0, 0.0421373, 4.31276, 75.2826, 4.82279 )

[node name="rgBox" type="RigidBody" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 4.80247, 80.2454, 7.50248 )
mass = 10.0

[node name="CollisionShape" type="CollisionShape" parent="rgBox"]
transform = Transform( 1, 0, 0, 0, 2, 0, 0, 0, 0.3, 0, 0, 0 )
shape = SubResource( 4 )

[node name="MeshInstance" type="MeshInstance" parent="rgBox/CollisionShape"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
mesh = SubResource( 5 )
skeleton = NodePath("../../..")
material/0 = ExtResource( 11 )

[node name="rgBox2" type="RigidBody" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 4.80247, 80.2454, 9.1456 )
mass = 100.0

[node name="CollisionShape" type="CollisionShape" parent="rgBox2"]
transform = Transform( 1, 0, 0, 0, 2, 0, 0, 0, 0.3, 0, 0, 0 )
shape = SubResource( 4 )

[node name="MeshInstance" type="MeshInstance" parent="rgBox2/CollisionShape"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
mesh = SubResource( 5 )
skeleton = NodePath("../../..")
material/0 = ExtResource( 11 )

[node name="rgBox3" type="RigidBody" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 4.80247, 80.2454, 10.8659 )
mass = 100.0

[node name="CollisionShape" type="CollisionShape" parent="rgBox3"]
transform = Transform( 1, 0, 0, 0, 2, 0, 0, 0, 0.3, 0, 0, 0 )
shape = SubResource( 4 )

[node name="MeshInstance" type="MeshInstance" parent="rgBox3/CollisionShape"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
mesh = SubResource( 5 )
skeleton = NodePath("../../..")
material/0 = ExtResource( 11 )
